--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="images/turtle.jpg" alt="turtle pic">
     <p>This is a turtle, pretty cool? Yes!</p>
 	  
-<script type="text/javascript" src="http://assets.freshdesk.com/widget/freshwidget.js"></script>
+<script type="text/javascript" src="https://s3.amazonaws.com/assets.freshdesk.com/widget/freshwidget.js"></script>
 <script type="text/javascript">
 	FreshWidget.init("", {"queryString": "&widgetType=popup", "utf8": "✓", "widgetType": "popup", "buttonType": "text", "buttonText": "Support", "buttonColor": "white", "buttonBg": "#530083", "alignment": "2", "offset": "235px", "formHeight": "500px", "url": "https://theticehurstballards.freshdesk.com"} );
 </script>
