--- a/support.html
+++ b/support.html
@@ -1,9 +1,9 @@
 <html><head><title>Turtles Support</title></head>
 <body>
 <h1> Our Turtles can help!</h1>
-<script type="text/javascript" src="http://assets.freshdesk.com/widget/freshwidget.js"></script>
+<script type="text/javascript" src="https://s3.amazonaws.com/assets.freshdesk.com/widget/freshwidget.js"></script>
 <style type="text/css" media="screen, projection">
-	@import url(http://assets.freshdesk.com/widget/freshwidget.css); 
+	@import url(https://s3.amazonaws.com/assets.freshdesk.com/widget/freshwidget.css); 
 </style> 
 <iframe title="Feedback Form" class="freshwidget-embedded-form" id="freshwidget-embedded-form" src="https://theticehurstballards.freshdesk.com/widgets/feedback_widget/new?&widgetType=embedded&screenshot=No" scrolling="no" height="500px" width="100%" frameborder="0" >
 </iframe>
