--- a/index.html
+++ b/index.html
@@ -284,5 +284,10 @@ function toggleFunction() {
 }
 </script>
 
+<script type="text/javascript" src="https://s3.amazonaws.com/assets.freshdesk.com/widget/freshwidget.js"></script>
+<script type="text/javascript">
+	FreshWidget.init("", {"queryString": "&widgetType=popup", "backgroundImage": "https://s3.amazonaws.com/assets.freshdesk.com/widget/help-button.png", "utf8": "✓", "widgetType": "popup", "buttonType": "image", "buttonText": "Support", "buttonColor": "white", "buttonBg": "#530083", "alignment": "2", "offset": "145px", "formHeight": "500px", "url": "https://theticehurstballards.freshdesk.com"} );
+</script>
+
 </body>
 </html>
